<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.4.2</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>
	<groupId>de.healthIMIS</groupId>
	<artifactId>iris-client-sormas-sidecar</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>IRIS Client SORMAS Sidecar</name>
	<description>Communicates as SORMAS sidecar directly with SORMAS within the health department&apos;s infrastructure</description>
	<licenses>
		<license>
			<name>GNU Affero General Public License (AGPL) v3</name>
			<url>https://www.gnu.org/licenses/agpl-3.0</url>
		</license>
	</licenses>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>11</java.version>
		<docker.image.prefix>inoeg</docker.image.prefix>
		<vavr-version>0.10.3</vavr-version>
	</properties>

	<profiles>
		<profile>
			<id>localDev</id>
			<activation>
				<file>
					<exists>src/main/resources/application-local.properties</exists>
				</file>
			</activation>

			<properties>
				<spring.profiles.active>dev,local</spring.profiles.active>
			</properties>

			<dependencies>
				<dependency>
					<groupId>com.h2database</groupId>
					<artifactId>h2</artifactId>
					<scope>runtime</scope>
				</dependency>
			</dependencies>
		</profile>
	</profiles>

	<dependencies>
		<dependency>
			<groupId>de.healthIMIS</groupId>
			<artifactId>iris-api-sidecar-client</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>de.healthIMIS</groupId>
			<artifactId>iris-sormas-api-client</artifactId>
			<version>1.55.0-SNAPSHOT</version>
		</dependency>

		<!-- Persistance -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.flywaydb</groupId>
			<artifactId>flyway-core</artifactId>
		</dependency>

		<!-- REST API -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-hateoas</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>

		<!-- Tests and Development -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-configuration-processor</artifactId>
			<optional>true</optional>
		</dependency>

		<!-- Third party libs -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
            <groupId>org.modelmapper</groupId>
            <artifactId>modelmapper</artifactId>
            <version>2.3.9</version>
        </dependency>
        <dependency>
			<groupId>io.vavr</groupId>
			<artifactId>vavr</artifactId>
			<version>${vavr-version}</version>
		</dependency>
		<dependency>
			<groupId>org.bouncycastle</groupId>
			<artifactId>bcpkix-jdk15on</artifactId>
			<version>1.68</version>
		</dependency>
		<!-- Security -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
			<version>RELEASE</version>
		</dependency>
		<dependency>
			<groupId>com.auth0</groupId>
			<artifactId>java-jwt</artifactId>
			<version>3.10.3</version>
		</dependency>
	</dependencies>

	<build>
		<finalName>${project.artifactId}-${project.version}_${env.GIT_TAG}</finalName>
		<plugins>
			<plugin>
				<!-- https://docs.spring.io/spring-boot/docs/current/maven-plugin/reference/htmlsingle/#build-image -->
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<profiles>
						<profile>${spring.profiles.active}</profile>
					</profiles>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
					<image>
						<name>${docker.image.prefix}/${project.artifactId}:${project.version}</name>
						<env>
							<!-- embeds environment variables into an image: https://github.com/paketo-buildpacks/environment-variables -->
							<BPE_SPRING_PROFILES_ACTIVE>docker</BPE_SPRING_PROFILES_ACTIVE>
							<!-- with GraalVM <BP_BOOT_NATIVE_IMAGE>true</BP_BOOT_NATIVE_IMAGE> -->
						</env>
					</image>
					<docker>
						<publishRegistry>
							<username>${env.DOCKER_HUB_USER}</username>
							<password>${env.DOCKER_HUB_PW}</password>
							<!-- <token>${env.DOCKER_HUB_TOKEN}</token> <url>https://docker.example.com/v1/</url> 
								<email>user@example.com</email> -->
						</publishRegistry>
					</docker>
				</configuration>
			</plugin>

			<!-- Integration tests-->
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.0</version>
				<configuration>
					<excludes>
						<exclude>**/*SystemTest.java</exclude>
						<exclude>**/*SystemTests.java</exclude>
					</excludes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
				<version>3.0.0</version>
				<executions>
					<execution>
						<id>add-integration-test-source</id>
						<phase>generate-test-sources</phase>
						<goals>
							<goal>add-test-source</goal>
						</goals>
						<configuration>
							<sources>
								<source>src/test-system/java</source>
							</sources>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>3.0.0-M5</version>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<testSourceDirectory>src/test-system/java</testSourceDirectory>
					<includes>
						<include>**/*SystemTest.java</include>
						<include>**/*SystemTests.java</include>
					</includes>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
